--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
   padding-bottom: 10px;
   width: 100%;
     border: 2px solid #6D098A;
-    color: purple;
+    color: orange;
     text-align: center;
 }
 
@@ -60,7 +60,6 @@ a {
   height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
-  /*border: 1px solid red;*/
   background-image: url('../img/FW_Logo.png');
 
 }
