--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
   padding-bottom: 10px;
   width: 100%;
     border: 2px solid #6D098A;
-    color: DarkOrange;
+    color: pink;
     text-align: center;
 }
 
