--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ a {
   border: 2px solid #6D098A;
 }
 
+.grid-container{
+
+  padding: 35px;
+}
+
 .grid-item-things{
 
   position: relative;
@@ -45,7 +50,7 @@ a {
   padding-bottom: 10px;
   width: 100%;
     border: 2px solid #6D098A;
-    color: pink;
+    color: #D008A2;
     text-align: center;
 }
 
@@ -93,10 +98,7 @@ a {
 
 }
 .button-logo {
-  font-weight: bold;
-  text-align: left;
-  font-size: 40px;
-  padding: 10px;
+padding-right: 30px;
 
 }
 
@@ -146,9 +148,7 @@ float: left;
   padding-left: 40px;
   padding-right: 40px;
   font-size: 20px;
-  text-align: justify;
-  text-justify: inter-word;
-  word-wrap: break-word;
+  text-align: left;
 }
 
 .name{
