--- a/css/pages.css
+++ b/css/pages.css
@@ -18,6 +18,7 @@ body {
   width: 50%;
   padding: 70px;
   border: 2px solid #6D098A;
+  opacity: 0;
   line-height: 2;
   display: inline-block;
   vertical-align: middle;
