--- a/css/pages.css
+++ b/css/pages.css
@@ -17,7 +17,7 @@ body {
   float: left;
   width: 50%;
   padding: 70px;
-  border: 2px solid #6D098A;
+  border: 2px solid rgba(255, 0, 0, .0);
   line-height: 2;
   display: inline-block;
   vertical-align: middle;
